@@ -4,8 +4,8 @@ Authors@R: c(
         person("Aaron", "Lun", role = c("aut", "cre"), email="infinite.monkeys.with.keyboards@gmail.com"),
         person("Davis", "McCarthy", role="aut")
     )
-Version: 1.1.5
-Date: 2020-12-16
+Version: 1.1.6
+Date: 2021-01-14
 License: GPL-3
 Title: Single-Cell RNA-Seq Analysis Utilities
 Description: 
