@@ -59,7 +59,6 @@ exportMethods(quickPerCellQC)
 exportMethods(sumCountsAcrossCells)
 exportMethods(sumCountsAcrossFeatures)
 exportMethods(summarizeAssayByGroup)
-exportMethods(whichNonZero)
 import(methods)
 importClassesFrom(BiocParallel,MulticoreParam)
 importClassesFrom(DelayedArray,DelayedArray)
@@ -89,8 +88,6 @@ importFrom(DelayedArray,DelayedArray)
 importFrom(DelayedArray,currentViewport)
 importFrom(DelayedArray,getAutoBPPARAM)
 importFrom(DelayedArray,makeNindexFromArrayViewport)
-importFrom(DelayedArray,nzdata)
-importFrom(DelayedArray,nzindex)
 importFrom(DelayedArray,setAutoBPPARAM)
 importFrom(DelayedArray,write_block)
 importFrom(DelayedMatrixStats,colMedians)
@@ -138,6 +135,7 @@ importFrom(SummarizedExperiment,colData)
 importFrom(SummarizedExperiment,rowData)
 importFrom(beachmat,colBlockApply)
 importFrom(beachmat,rowBlockApply)
+importFrom(beachmat,whichNonZero)
 importFrom(methods,as)
 importFrom(methods,is)
 importFrom(stats,mad)
